@@ -393,6 +393,6 @@ CREATE TRIGGER [contact_delete_member] ON [dbo].[contacts]
     WHERE [contact_id] IN (SELECT [contact_id] FROM deleted)
 GO
 
-INSERT INTO [dbo].[system] ([name], [value]) VALUES ('roundcube-version', '2014042900')
+INSERT INTO [dbo].[system] ([name], [value]) VALUES ('roundcube-version', '2015030800')
 GO
 
