@@ -1,0 +1,1 @@
+ALTER TABLE `identities` CHANGE `signature` `signature` longtext;
