@@ -218,4 +218,4 @@ CREATE TABLE "system" (
     "value" long
 );
 
-INSERT INTO "system" ("name", "value") VALUES ('roundcube-version', '2014042900');
+INSERT INTO "system" ("name", "value") VALUES ('roundcube-version', '2015030800');
